--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <base href="/" />
     <title>Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <app>Loading...</app>
-</body>
+  </body>
 </html>
