--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,11 @@
 <html>
   <head>
     <base href="/" />
-    <title>Login</title>
+    <title>鲲鹏</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
   </head>
+
   <body>
-    <app>Loading...</app>
+    <app>加载中...</app>
   </body>
 </html>
