--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <base href="/" />
-    <title>鲲鹏</title>
+    <title>华为鲲鹏应用</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
